longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: lh.mpw.sh
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'

spec:
  ingressClassName: nginx
  rules:
  - host: lh.mpw.sh
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - lh.mpw.sh
    secretName: longhorn-tls
